force-app/main/default/objects/Cat__c/Cat__c.object-meta.xml
<CustomObject>
    <label>Cat</label>
    <nameField>
        <label>Cat Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cats</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>