force-app/main/default/objects/Cat__c/fields/AccessionDate__c.field-meta.xml
<CustomField>
    <fullName>AccessionDate__c</fullName>
    <label>AccessionDate</label>
    <type>DateTime</type>
</CustomField>