force-app/main/default/objects/Cat__c/fields/Catno__c.field-meta.xml
<CustomField>
    <fullName>Catno__c</fullName>
    <displayFormat>C-{0000}</displayFormat>
    <externalId>true</externalId>
    <label>CatNo</label>
    <type>AutoNumber</type>
</CustomField>