force-app/main/default/objects/Cat__c/fields/Curreny__c.field-meta.xml
<CustomField>
    <fullName>Curreny__c</fullName>
    <label>Curreny</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>