force-app/main/default/objects/Cat__c/fields/DateofEntry__c.field-meta.xml
<CustomField>
    <fullName>DateofEntry__c</fullName>
    <label>DateofEntry</label>
    <type>Date</type>
</CustomField>