force-app/main/default/objects/Cat__c/fields/From_Accesion_No__c.field-meta.xml
<CustomField>
    <fullName>From_Accesion_No__c</fullName>
    <label>From Accesion No</label>
    <length>5</length>
    <type>Text</type>
</CustomField>