force-app/main/default/objects/Cat__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BOOK BANK</fullName>
            </value>
            <value>
                <fullName>PG LIBRARY</fullName>
            </value>
            <value>
                <fullName>UG LIBRARY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>