force-app/main/default/objects/Cat__c/fields/Noofcopy__c.field-meta.xml
<CustomField>
    <fullName>Noofcopy__c</fullName>
    <label>Noofcopy</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>