force-app/main/default/objects/Cat__c/fields/SubjectCode__c.field-meta.xml
<CustomField>
    <fullName>SubjectCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SubjectCode</label>
    <referenceTo>SubjectCode__c</referenceTo>
    <relationshipLabel>Cats</relationshipLabel>
    <relationshipName>Cats</relationshipName>
    <type>Lookup</type>
</CustomField>