force-app/main/default/objects/Cat__c/validationRules/AuthorNotBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>AuthorNotBlank</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Author__c )</errorConditionFormula>
    <errorMessage>Please Enter the Autor Name</errorMessage>
</ValidationRule>