force-app/main/default/objects/Cat__c/validationRules/BackDateEntry.validationRule-meta.xml
<ValidationRule>
    <fullName>BackDateEntry</fullName>
    <active>true</active>
    <description>Back Date Entry Not Allowed</description>
    <errorConditionFormula>DateofEntry__c &lt; Today()</errorConditionFormula>
    <errorDisplayField>DateofEntry__c</errorDisplayField>
    <errorMessage>Back Date Entry Not Allowed</errorMessage>
</ValidationRule>