force-app/main/default/objects/Cat__c/validationRules/PriceLimit.validationRule-meta.xml
<ValidationRule>
    <fullName>PriceLimit</fullName>
    <active>true</active>
    <errorConditionFormula>Price__c &gt;1000</errorConditionFormula>
    <errorMessage>Price should be less than 1000</errorMessage>
</ValidationRule>