force-app/main/default/objects/Cat__c/validationRules/TitleandPriceNoBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>TitleandPriceNoBlank</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Isblank( Title__c ),Isblank( Noofcopy__c ))</errorConditionFormula>
    <errorDisplayField>Title__c</errorDisplayField>
    <errorMessage>Title can not be blank and Price Cannot be Blank</errorMessage>
</ValidationRule>