force-app/main/default/objects/Cat__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Catno__c</columns>
    <columns>Title__c</columns>
    <columns>Author__c</columns>
    <columns>Noofcopy__c</columns>
    <columns>DateofEntry__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>