force-app/main/default/objects/Cat__c/listViews/DelhiQueue_Cat.listView-meta.xml
<ListView>
    <fullName>DelhiQueue_Cat</fullName>
    <filterScope>Queue</filterScope>
    <label>DelhiQueue</label>
    <queue>DelhiQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>