force-app/main/default/objects/Cat__c/listViews/NoidaQueueGroup_Cat.listView-meta.xml
<ListView>
    <fullName>NoidaQueueGroup_Cat</fullName>
    <filterScope>Queue</filterScope>
    <label>NoidaQueueGroup</label>
    <queue>NoidaQueueGroup</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>